--- a/RepositoryPattern-Estudo/Views/Product/Edit.cshtml
+++ b/RepositoryPattern-Estudo/Views/Product/Edit.cshtml
@@ -1,25 +1,27 @@
 ﻿@model RepositoryPattern_Estudo.Models.Product
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Edit";
 }
 
-<h1>Cadastrar Produtos</h1>
+<h1>Edit</h1>
 
-@*<h4>Product</h4>*@
-
+<h4>Product</h4>
 <hr />
-@*<h4>@ViewBag.Mgs</h4>*@
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             @*<div class="form-group">
-            <label asp-for="Id" class="control-label"></label>
-            <input asp-for="Id" class="form-control" />
-            <span asp-validation-for="Id" class="text-danger"></span>
-        </div>*@
+                <label asp-for="Id" class="control-label"></label>
+                <input asp-for="Id" class="form-control" />
+                <span asp-validation-for="Id" class="text-danger"></span>
+            </div>*@
+
             <div class="form-group">
+                @*Francisco adção*@
+                <input asp-for="Id" type="hidden" class="form-control" />
+
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
@@ -35,7 +37,7 @@
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Salvar" class="btn btn-primary" />
+                <input type="submit" value="Atualizar" class="btn btn-primary" />
             </div>
             <h4 class="form-group">@ViewBag.Mgs</h4>
         </form>
